# AlphaToe

./: CMakeLists.txt  README.md  alphatoe.py  data copy.csv  data.csv  main.py  mmax_data.csv  tttgame.py  tttgameai.py  tttgamedata.py
TTNN/legacy/: Matrix.h  NeuralNetwork.cpp
cppGraph/: DrawComponent.cpp  DrawComponent.h  Game.cpp  Game.h  ImageComponent.cpp  ImageComponent.h  Line.cpp  Line.h
cppNN/: DynamicMatrix.cpp  DynamicMatrix.h  NeuralNetwork.cpp  NeuralNetwork.h  Tensor.hpp  TwoHeadedNetwork.cpp  TwoHeadedNetwork.h
legacy/python/: tttgame.py  tttgamedata.py
src/ai/: AlphaToe.cpp  AlphaToe.h  MCTSNode.cpp  MCTSNode.h  Minimax.cpp  Minimax.h  TwoHeadedNet.hpp
src/game/: GameRules.cpp  GameRules.h  GameState.cpp  GameState.h
src/train/: ReplayBuffer.cpp  ReplayBuffer.h  SelfPlay.cpp  SelfPlay.h  TrainingLoop.cpp  TrainingLoop.h  main_train.cpp
src/ui/: TerminalUI.cpp  TerminalUI.h  main_game.cpp
